@@ -8,8 +8,8 @@ import com.library.smart_internship.repository.PasswordResetTokenRepository;
 import com.library.smart_internship.repository.StudentRepository;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.webmvc.test.autoconfigure.AutoConfigureMockMvc;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.web.servlet.MockMvc;
@@ -58,7 +58,7 @@ class RegistrationAndAuthIT {
                 .toList();
 
         assertThat(matches).hasSize(1);
-        Student saved = matches.get(0);
+        Student saved = matches.getFirst();
         assertThat(saved.getRole()).isEqualTo("STUDENT");
         assertThat(saved.getSkills()).isEqualTo("Java, Spring Boot");
         assertThat(saved.getPassword()).isNotEqualTo("secret123");
